--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,3 +15,9 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.use_sql_comments=true
+
+#GPT API
+openai.model=gpt-4o
+openai.api.key=${OPENAI_API_KEY}
+##????? ?? ??? ????? ??
+openai.api.url= https://api.openai.com/v1/chat/completions
