:sparkles: Feat : gpt 집 순위 api

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,5 +19,5 @@ spring.jpa.properties.hibernate.use_sql_comments=true
 #GPT API
 openai.model=gpt-4o
 openai.api.key=${OPENAI_API_KEY}
-##????? ?? ??? ????? ??
+# Gpt?? ?? ?? Endpoint
 openai.api.url= https://api.openai.com/v1/chat/completions
