Refactor : 환경 변수 설정

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -20,4 +20,4 @@ spring.jpa.properties.hibernate.use_sql_comments=true
 openai.model=gpt-4o
 openai.api.key=${OPENAI_API_KEY}
 # Gpt?? ?? ?? Endpoint
-openai.api.url= https://api.openai.com/v1/chat/completions
+openai.api.url=${OPENAI_API_URL}
