--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,7 +17,7 @@ spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.use_sql_comments=true
 
 #GPT API
-openai.model=gpt-4o
+openai.model=gpt-4o-mini
 openai.api.key=${OPENAI_API_KEY}
 # Gpt?? ?? ?? Endpoint
 openai.api.url=${OPENAI_API_URL}
